<resources>
    <string name="app_name">Oaakee</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_bus_stop">Min hållplats:</string>
    <string name="scan">Start Scanning!</string>
    <string name="buswifiname">ElectriCity</string>
    <string name="info_bus_name">7:an</string>
    <string name="info_arrives_in">ankommer om</string>
    <string name="info_min">minuter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_hamburger">Hamburger</string>

    <string name="title_section1">Min Resa</string>
    <string name="title_section2">Stämpla</string>
    <string name="title_section3">Konto</string>
    <string name="title_section4">Inställningar</string>
    <string name="title_section5">Historik</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="arrive_at_destination">anländer om</string>
    <string name="arrived_at_destination">Framme vid destinationen</string>
    <string name="arrives_in">ankommer om</string>
    <string name="minutes">minuter</string>
    <string name="minute">minut</string>
    <string name="departures_in">avgår om</string>
    <string name="to">till</string>
    <string name="from">från</string>
    <string name="track">Läge</string>

    <string name="text_want_to_go_to">Jag vill åka till:</string>
    <string name="text_from">från</string>

    <string name="your_ticket">Din Biljett</string>
    <string name="latest">Senaste</string>
    <string name="charge">Saldo</string>
    <string name="payment_minutes">min</string>
    <string name="font">sans-serif-thin</string>
    <string name="press_for_ticket">tryck för att stämpla</string>
    <string name="time_never">Aldrig</string>
    <string name="empty_charge">0 kr</string>

    <string name="AlarmTicker">Stop! Hammer time!</string>
    <string name="AlarmTitle">Arrived</string>
    <string name="AlarmText">The next stop is your destination. Time to get off!</string>
</resources>
