<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_centerVertical="true"
    android:layout_height="fill_parent"
    android:useDefaultMargins="false"
    android:rowOrderPreserved="false"
    android:nestedScrollingEnabled="false"
    android:columnOrderPreserved="false"
    android:rowCount="3"
    android:columnCount="3"
    android:longClickable="false"
    android:clickable="false"
    android:transitionGroup="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chargeText"
        android:text="@string/your_ticket"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:singleLine="true"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:layout_columnWeight="0"
        android:layout_rowWeight="1"
        android:textColor="@android:color/black"
        android:fontFamily="@string/font"
        android:textAllCaps="true"
        android:editable="false"
        android:inputType="none" />

    <ProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/countdown_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:indeterminate="false"
        android:max="1000"
        android:progress="999"
        android:progressDrawable="@drawable/countdown_ring"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_columnWeight="0"
        android:layout_rowWeight="0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:gravity="center_vertical|center_horizontal"
        android:layout_columnWeight="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_rowWeight="0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeleft"
            android:textSize="90sp"
            android:text="19"
            android:fontFamily="@string/font"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:capitalize="none"
            android:autoText="false"
            android:textAllCaps="true"
            android:editable="false"
            android:inputType="none" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/minutes"
            android:fontFamily="@string/font"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:capitalize="none"
            android:autoText="false"
            android:textAllCaps="false"
            android:editable="false"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="0"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="0"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/charge"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_gravity="left"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:fontFamily="@string/font"
            android:capitalize="none"
            android:textAlignment="gravity"
            android:autoText="false"
            android:textAllCaps="true"
            android:editable="false"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="0 kr"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_gravity="left"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:fontFamily="@string/font"
            android:capitalize="none"
            android:textAlignment="gravity"
            android:autoText="false"
            android:textAllCaps="true"
            android:editable="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="0"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="0"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/latest"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_gravity="right"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:fontFamily="@string/font"
            android:capitalize="characters"
            android:textAlignment="gravity"
            android:editable="false"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="Idag 10:04"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"
            android:layout_gravity="right"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:fontFamily="@string/font"
            android:capitalize="characters"
            android:textAlignment="gravity"
            android:editable="false"
            android:textAllCaps="true" />

    </LinearLayout>

</GridLayout>