<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/infoArrivesIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/infoCircleHolder"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/info_arrives_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/infoCircleHolder"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/info_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/infoBusName"
            android:layout_above="@+id/infoArrivesIn"
            android:layout_centerHorizontal="true"
            android:text="@string/info_bus_name"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:id="@+id/linearLayout2">
            <TextView
                android:id="@+id/info_chosen_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vald resa"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/info_from_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chalmers - Lindholmen"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_min"
            android:textColor="@color/text_color_white"
            android:textSize="20sp"
            android:id="@+id/info_minutes_text"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_alignLeft="@+id/infoCircleHolder"
            android:layout_alignStart="@+id/infoCircleHolder"
            android:layout_alignRight="@+id/infoCircleHolder"
            android:layout_alignEnd="@+id/infoCircleHolder"
            android:layout_below="@+id/infoArrivesIn"
            android:layout_alignBottom="@+id/infoCircleHolder" />

        <TextView
            android:id="@+id/timeTilArrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_white"
            android:textSize="70sp"
            tools:text="16"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/infoArrivesIn"
            android:layout_alignBottom="@+id/infoCircleHolder" />

        <TextView
            android:id="@+id/below_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="bla bla"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/infoCircleHolder"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/info_delayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="[Fordonstyp] är ?? minuter sen"
            android:gravity="center"
            android:textColor="#FF0000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/below_circle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


</FrameLayout>